<resources>
    <string name="app_name">책가방</string>
    <string name="facebook_app_id">499142987361459</string>
    <string name="fb_login_protocol_scheme">fb499142987361459</string>

    <!-- 스플래시 -->
    <string name="splash_loading">들어가는 중…</string>

    <string name="login_start">책가방 시작하기</string>

    <!-- 회원가입 -->
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_email">이메일</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_gender">성별</string>
    <string name="sign_up_male">남성</string>
    <string name="sign_up_female">여성</string>
    <string name="sign_up_birthday">생년월일</string>
    <string name="sign_up_done">확인</string>

    <!-- 이용약관 -->
    <string name="login_terms_html">
        계정을 만들면 책가방의 서비스 약관 및 개인정보 보호 정책에\n동의하는 것으로 간주합니다.
    </string>
    <string name="login_terms_of_use_string">서비스 약관</string>
    <string name="login_terms_of_use_url">https://naver.com</string>
    <string name="login_privacy_policy_string">개인정보 보호 정책</string>
    <string name="login_privacy_policy_url">https://google.com</string>

    <!-- 이용약관 동의 체크박스 -->
    <string name="terms_of_use">이용약관</string>
    <string name="terms_agree_all">아래 항목에 전부 동의합니다.</string>
    <string name="terms_1">(필수) 개인정보 수집 및 이용에 동의합니다.</string>
    <string name="terms_2">(필수) 이용약관에 동의합니다.</string>
    <string name="terms_3">(필수) 개인정보 제3자 제공에 동의합니다.</string>

    <string name="start">시작하기</string>

    <!-- 메인 탭 -->
    <string name="main_navigation_bookmark">책가방</string>
    <string name="main_navigation_profile">프로필</string>
    <string name="main_navigation_history">히스토리</string>
    <string name="main_navigation_setting">설정</string>

    <!-- 새 폴더 -->
    <string name="new_folder">새 폴더</string>
    <string name="save">저장</string>

    <!-- 메모 타이틀 -->
    <string name="memo_title">메모 : </string>

</resources>
